--- a/style.css
+++ b/style.css
@@ -264,34 +264,8 @@ optgroup {
 
 
 /**
- * 2.0 - Genericons
+ * 2.0 - Genericons @not used @see Navigation
  */
-
-.menu-item-has-children a:after,
-.social-navigation a:before,
-.dropdown-toggle:after,
-.bypostauthor > article .fn:after,
-.comment-reply-title small a:before,
-.pagination .prev:before,
-.pagination .next:before,
-.pagination .nav-links:before,
-.pagination .nav-links:after,
-.search-submit:before {
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-font-smoothing: antialiased;
-	display: inline-block;
-	font-family: "Genericons";
-	font-size: 16px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: normal;
-	line-height: 1;
-	
-	text-align: center;
-	text-decoration: inherit;
-	text-transform: none;
-	vertical-align: top;
-}
 
 
 /**
@@ -875,12 +849,13 @@ a:active {
 
 .dropdown-toggle:after {
 	border: 0 solid #d1d1d1;
-	border-left-width: 1px;
-	content: "\f431";
+	border-right-width: 1px;
+	content: "^";
 	font-size: 24px;
 	left: 1px;
 	position: relative;
 	width: 48px;
+	transform: rotate(180deg)
 }
 
 .dropdown-toggle:hover,
@@ -920,31 +895,80 @@ a:active {
 	margin: 0 0.4375em 0.4375em 0;
 }
 
+.menu-item-has-children a:after,
+.social-navigation a:before,
+.dropdown-toggle:after,
+.bypostauthor > article .fn:after,
+.comment-reply-title small a:before,
+.pagination .prev:before,
+.pagination .next:before,
+.pagination .nav-links:before,
+.pagination .nav-links:after,
+.search-submit:before {
+	display: inline-block;
+	font-family: "inherit";
+	font-size: 16px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: normal;
+	line-height: revert;
+	outline: none;
+	text-align: center;
+	text-decoration: inherit;
+	text-transform: none;
+	vertical-align: top;
+}
+
 .social-navigation a {
 	border: 1px solid #d1d1d1;
-	border-radius: 50%;
 	color: #1a1a1a;
 	display: block;
 	height: 35px;
 	position: relative;
-	width: 35px;
+	width: 85px;
+	outline: none;
+	line-height: initial;
+	font-family:Arial, Helvetica, sans-serif;
+	white-space: pre-wrap;
+	overflow: hidden;
 }
-
+.social-navigation a .screen-reader-text{
+	line-height: .825rem;
+	visibility: visible;
+	width: 100%;
+	margin-left: -33px;
+	clip: unset;
+	margin-top: 4px;
+	height: 35px;
+	font-size: smaller;
+	font-family:Arial, Helvetica, sans-serif;
+	text-align: center;
+}
 .social-navigation a:before {
-	content: "\f415";
+	content: "";
 	height: 33px;
 	line-height: 33px;
 	text-align: center;
 	width: 33px;
 }
-
+/*
+.social-navigation a .screen-reader-text{ 
+	visibility: visible;
+	clip: unset;
+	width: 33px;
+	height: 33px;
+    margin-left: -33px;
+	margin-top: 3px;
+	font-family:Arial, Helvetica, sans-serif;
+} */
 .social-navigation a:hover:before,
 .social-navigation a:focus:before {
 	color: #007acc;
+	outline: none;
 }
-
+/*
 .social-navigation a[href*="codepen.io"]:before {
-	content: "\f216";
+	content: "CoPen";
 }
 
 .social-navigation a[href*="digg.com"]:before {
@@ -1051,7 +1075,7 @@ a:active {
 .social-navigation a[href$="/feed/"]:before {
 	content: "\f413";
 }
-
+*/
 .post-navigation {
 	border-top: 4px solid #1a1a1a;
 	border-bottom: 4px solid #1a1a1a;
@@ -3105,10 +3129,11 @@ p > video {
 	}
 
 	.main-navigation .menu-item-has-children > a:after {
-		content: "\f431";
+		content: "^";
 		position: absolute;
 		right: 0.625em;
 		top: 0.8125em;
+		transform: rotate(180deg)
 	}
 
 	.main-navigation ul ul .menu-item-has-children > a {
@@ -3238,7 +3263,7 @@ width: 25%;
 	.widget button,
 	.widget input[type="button"],
 	.widget input[type="reset"],
-	.widget input[type="submit"] {
+	.widget input[type="submit"]:not(.search-submit) {
 		line-height: 1;
 		padding: 0.846153846em;
 	}
@@ -3257,6 +3282,11 @@ width: 25%;
 	.widget input[type="number"],
 	.widget textarea {
 		padding: 0.4615384615em 0.5384615385em;
+	}
+
+	.widget .search-submit{
+		font-size: xx-small;
+		padding: 0.14em;
 	}
 
 	.widget h1 {
