--- a/style.css
+++ b/style.css
@@ -675,12 +675,11 @@ textarea:focus {
 
 input[type="search"].search-field {
 	border-radius: 2px 0 0 2px;
-	width: -webkit-calc(100% - 42px);
-	width: calc(100% - 42px);
+	width: calc(100% - 72px);
 }
 
 .search-submit:before {
-	content: "\f400";
+	content: "[?]";
 	font-size: 24px;
 	left: 2px;
 	line-height: 42px;
@@ -2487,6 +2486,43 @@ body.search-no-results .page-header {
 	content: '\002f';
 }
 
+.footer-widget-section{
+
+	display: inline-block;
+    min-height: 30px;
+	height:100%;
+	margin-top: 15px;
+	width: 100%;
+	background: #efefef;
+	text-align:left;
+}
+
+.footer-item-left{
+	padding: 1em;
+	width: auto;
+	background: #ffa;
+	width: 50%;
+	float: left;
+}
+
+.footer-item-right{
+	padding: 1em;
+    float: right;
+	display:block;
+	width: 50%;
+}
+
+
+	#secondary.sidebar,
+	#primary.sidebar {
+		float: right;
+padding: 0;
+max-width: 25%;
+	}
+.footer-widget-section #secondary.sidebar{
+	float: initial;
+	max-width: 100%;
+}
 
 /**
  * 12.0 - Media
@@ -3184,12 +3220,6 @@ p > video {
 		margin-left: 0;
 	}
 
-	.sidebar {
-		float: right;
-padding: 0;
-width: 25%;
-	}
-
 	.widget {
 		font-size: 13px;
 		font-size: 0.8125rem;
@@ -3286,7 +3316,7 @@ width: 25%;
 
 	.widget .search-submit{
 		font-size: xx-small;
-		padding: 0.14em;
+		padding: 0.11222em;
 	}
 
 	.widget h1 {
@@ -3342,7 +3372,6 @@ width: 25%;
 	}
 
 	.widget input[type="search"].search-field {
-		width: -webkit-calc(100% - 35px);
 		width: calc(100% - 35px);
 	}
 
@@ -3449,7 +3478,35 @@ width: 25%;
 		padding-left: 15%;
 	}
 }
+/* <=984px
+ */
+@media screen and (max-width: 56.874em){
+	.widget .search-submit{
+		position: relative;
+		font-size: small;
+		padding: .8444rem .15%;
+		top: -1px;
+		left: -5px;
+		width:65px;	
+	}
 
+	#secondary.sidebar,
+	#primary.sidebar {
+		float: left;
+		padding: 1em 8%;
+		max-width: 100%;
+	}
+	.site-main > article{
+		min-width: 100%;
+		float: none;
+		display: block;
+		margin-top: 0;
+	}
+	.entry-content{
+		margin-right: 8%;
+	}
+
+}
 
 /**
  * 14.4 - >= 985px
